--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,4 +17,5 @@ rfd = "0.11.0"
 egui_extras_xt = { git = "https://github.com/xTibor/egui_extras_xt", version = "0.1.0", features = ["knobs", "displays"] }
 cpal = "0.15.0"
 strum = { version = "0.24.1" }
+rand = "0.8.5"
 # egui_extras_xt = { path = "../egui_extras_xt/egui_extras_xt", version="0.1.0", features = ["knobs", "displays"] }
