--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,4 +18,5 @@ egui_extras_xt = { git = "https://github.com/xTibor/egui_extras_xt", version = "
 cpal = "0.15.0"
 strum = { version = "0.24.1" }
 rand = "0.8.5"
+rtrb = "0.2.3"
 # egui_extras_xt = { path = "../egui_extras_xt/egui_extras_xt", version="0.1.0", features = ["knobs", "displays"] }
