--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ name = "tombo-music"
 path = "src/main.rs"
 
 [dependencies]
-eframe = "0.21.0"
+eframe = { version = "0.21.0", features = ["dark-light"] }
 egui = "0.21.0"
 im = "15.1.0"
 rfd = "0.11.0"
