--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,9 @@
 	"editor.insertSpaces": false,
 	"editor.rulers": [
 		80, 100
-	]
+	],
+	"search.exclude": {
+		"/target": true,
+		"/Cargo.lock": true
+	}
 }
