--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,4 +21,5 @@ rand = "0.8.5"
 rtrb = "0.2.3"
 vst = "0.3.0"
 rayon = "1.6.1"
+anyhow = "1.0.69"
 # egui_extras_xt = { path = "../egui_extras_xt/egui_extras_xt", version="0.1.0", features = ["knobs", "displays"] }
